Blog website with Tailwind css

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
    <!-- Hero end -->
 
    <!-- Article start -->
-   <section class="h-screen">
+   <section>
       <div class="container m-auto px-24">
          <div class="mt-32 flex flex-row justify-between">
             <div>
@@ -461,11 +461,196 @@
             </div>
          </div>
          <div class="text-center my-20">
-            <a href="#" class="bg-blue-700 py-3 px-7 rounded-full text-white font-semibold hover:bg-blue-800 ease-in duration-100">Show me more</a>
+            <a href="#"
+               class="bg-blue-700 py-3 px-7 rounded-full text-white font-semibold hover:bg-blue-800 ease-in duration-100">Show
+               me more</a>
          </div>
       </div>
    </section>
    <!-- Article end -->
+
+   <!-- topics start -->
+   <section class="py-20 bg-gray-100 rounded-3xl mb-24">
+      <div class="container px-24">
+
+         <div class="text-center">
+            <h1 class="font-bold text-4xl leading-relaxed">Top trending topics</h1>
+            <h5 class="font-medium text-xl text-gray-400">Discover over 100 topics</h5>
+         </div>
+
+         <div class="grid grid-cols-5 gap-4 justify-items-center mt-10">
+
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <span
+                  class="inline-flex px-2.5 py-1 rounded-full font-medium text-xs absolute top-3 left-3 text-red-800 bg-red-100">#1</span>
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <span
+                  class="inline-flex px-2.5 py-1 rounded-full font-medium text-xs absolute top-3 left-3 text-sky-800 bg-sky-100">#2</span>
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <span
+                  class="inline-flex px-2.5 py-1 rounded-full font-medium text-xs absolute top-3 left-3 text-yellow-800 bg-yellow-100">#3</span>
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <span
+                  class="inline-flex px-2.5 py-1 rounded-full font-medium text-xs absolute top-3 left-3 text-purple-800 bg-purple-100">#4</span>
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+
+            <div
+               class="relative bg-white py-7 px-14 shadow-inherit hover:shadow-2xl hover:duration-200 rounded-2xl cursor-pointer">
+               <img class="rounded-full w-20 h-20" src="image/pexels-photo-250591-2-768x1024.jpeg" alt="">
+               <div class="mt-3">
+                  <h3 class="text-center">Photos</h3>
+                  <span class="text-center">17 Articles</span>
+               </div>
+            </div>
+
+         </div>
+
+
+      </div>
+   </section>
+   <!-- topics end -->
+
+   <!-- Footer Start -->
+   <footer class="border-t border-neutral-200">
+      <div class="container px-24">
+         <div class="grid grid-cols-5 gap-3 mt-20">
+            <div class=" h-60 m-2 col-span-1">
+               <img class="cursor-pointer mb-7" src="image/Frame.png" alt="Logo">
+               <ul>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Documentation</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Support forum</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Developers</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Learn design</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">What's new</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Releases</li>
+               </ul>
+            </div>
+            <div class=" h-60 m-2 col-span-1">
+               <ul>
+                  <strong>Resources</strong>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Best practices</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Support</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Changelog</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Installation</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Contact</li>
+                  
+               </ul>
+            </div>
+            <div class=" h-60 m-2 col-span-1">
+               <ul>
+                  <strong>Community</strong>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Discussion</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Code of Conduct</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Community</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Contributing</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">Concurrent</li>
+                  <li class="leading-8 cursor-pointer text-gray-600 hover:text-black">API Reference</li>
+               </ul>
+            </div>
+            <div class=" h-60 m-2 col-span-2">
+               <strong>About us</strong>
+               <ul>
+                  <li>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                     alteration in some form</li>
+                  <li>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                     classical Latin literature from 45 BC, making it over 2000 years old.</li>
+               </ul>
+               <ul class="flex flex-row mt-5">
+                  <li>
+                     <a class="pl-2 text-3xl" href="#"><i class="ri-facebook-circle-fill"></i></a>
+                  </li>
+                  <li>
+                     <a class="pl-2 text-3xl" href="#"><i class="ri-twitter-fill"></i></a>
+                  </li>
+                  <li>
+                     <a class="pl-2 text-3xl" href="#"><i class="ri-youtube-fill"></i></a>
+                  </li>
+                  <li>
+                     <a class="pl-2 text-3xl" target="_blank" href="https://github.com/yousufislamme"><i class="ri-github-fill"></i></a>
+                  </li>
+               </ul>
+
+            </div>
+         </div>
+      </div>
+   </footer>
+   <!-- Footer End -->
+
+
+
+
+
 
    <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
    <script src="js/app.js"></script>
